# server/build/swagger.json
@@ -169,57 +169,82 @@
 				"$ref": "#/components/schemas/MemberField",
 				"description": "Type of a member of an event"
 			},
+			"Arrival": {
+				"description": "Enum for the arrival of a member of a working weekend",
+				"enum": [
+					"FrF",
+					"FrM",
+					"FrA",
+					"SaF",
+					"SaM",
+					"SaA",
+					"SaS"
+				],
+				"type": "string"
+			},
+			"Departure": {
+				"description": "Enum for the departure of a member of a working weekend",
+				"enum": [
+					"FrM",
+					"FrA",
+					"SaF",
+					"SaM",
+					"SaA",
+					"So"
+				],
+				"type": "string"
+			},
 			"EventWWMember": {
 				"properties": {
 					"status": {
 						"type": "string"
 					},
-					"kommentar": {
+					"comment": {
 						"type": "string"
 					},
-					"vegetarier": {
+					"isVegetarian": {
 						"type": "boolean"
 					},
-					"plaetze": {
+					"seats": {
 						"type": "number",
 						"format": "double"
 					},
-					"auto": {
+					"car": {
 						"type": "boolean"
 					},
-					"abreise": {
+					"departure": {
+						"$ref": "#/components/schemas/Departure"
+					},
+					"arrival": {
+						"$ref": "#/components/schemas/Arrival"
+					},
+					"lastName": {
 						"type": "string"
 					},
-					"anreise": {
+					"firstName": {
 						"type": "string"
 					},
-					"nachname": {
-						"type": "string"
-					},
-					"vorname": {
-						"type": "string"
-					},
-					"mitgliedID": {
+					"mitgliedId": {
 						"type": "number",
 						"format": "double"
 					},
-					"eventID": {
+					"eventId": {
 						"type": "number",
 						"format": "double"
 					}
 				},
 				"required": [
 					"status",
-					"kommentar",
-					"vegetarier",
-					"plaetze",
-					"auto",
-					"abreise",
-					"anreise",
-					"nachname",
-					"vorname",
-					"mitgliedID",
-					"eventID"
+					"comment",
+					"isVegetarian",
+					"seats",
+					"car",
+					"departure",
+					"arrival",
+					"lastName",
+					"firstName",
+					"mitgliedId",
+					"eventId"
 				],
 				"type": "object",
 				"description": "Type of a member of an event that is a working weekend"
@@ -320,25 +345,6 @@
 				],
 				"type": "object",
 				"description": "Type of the updated event"
-			},
-			"UpdateEventRequest": {
-				"properties": {
-					"organizers": {
-						"items": {
-							"$ref": "#/components/schemas/EventOrganizer"
-						},
-						"type": "array"
-					},
-					"event": {
-						"$ref": "#/components/schemas/EventDto"
-					}
-				},
-				"required": [
-					"organizers",
-					"event"
-				],
-				"type": "object",
-				"description": "Type of the request to update an event"
 			},
 			"Member": {
 				"properties": {
@@ -2882,27 +2888,18 @@
 						"format": "double"
 					},
 					"arrival": {
-						"type": "string",
-						"enum": [
-							"FrF",
-							"FrM",
-							"FrA",
-							"SaF",
-							"SaM",
-							"SaA",
-							"SaS"
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Arrival"
+							}
 						],
 						"nullable": true
 					},
 					"departure": {
-						"type": "string",
-						"enum": [
-							"FrM",
-							"FrA",
-							"SaF",
-							"SaM",
-							"SaA",
-							"So"
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Departure"
+							}
 						],
 						"nullable": true
 					},
@@ -2915,7 +2912,7 @@
 						"format": "double",
 						"nullable": true
 					},
-					"vegetarian": {
+					"isVegetarian": {
 						"type": "boolean",
 						"nullable": true
 					},
@@ -2937,7 +2934,7 @@
 					"departure",
 					"car",
 					"seats",
-					"vegetarian",
+					"isVegetarian",
 					"comment",
 					"event",
 					"member"
@@ -4902,8 +4899,8 @@
 						"description": "No content"
 					}
 				},
-				"description": "Retrieves the members of the event with the given `eventID`",
-				"summary": "Retrieves the members of the event",
+				"description": "Updates the event with the given `eventID` with the given `updatedEvent`",
+				"summary": "Updates the event",
 				"tags": [
 					"Events"
 				],
@@ -4929,7 +4926,32 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/UpdateEventRequest"
+								"$ref": "#/components/schemas/EventDto"
+							},
+							"example": {
+								"eventId": 7,
+								"name": "Test Event",
+								"location": "Test Location",
+								"startDate": "2022-01-01",
+								"endDate": "2022-01-02",
+								"startTime": "12:00",
+								"endTime": "12:00",
+								"registrationStart": "2021-01-01",
+								"registrationEnd": "2021-01-02",
+								"maxParticipants": 100,
+								"description": "Test Description",
+								"type": "Sonstige",
+								"organizers": [
+									{
+										"memberID": 8167,
+										"vorname": "Wolfgang",
+										"nachname": "Luft",
+										"status": "aktiv",
+										"name": "w.luft"
+									}
+								],
+								"members": [],
+								"wwMembers": []
 							}
 						}
 					}
