# server/src/resources/events/EventsController.ts
@@ -1,9 +1,9 @@
 import { Body, Controller, Get, Path, Put, Request, Route, Security, Tags } from "tsoa";
-import { EventDto, EventMember, EventWWMember, UpdateEventRequest } from "../../types/EventTypes";
-import EventsService from "./EventsService";
 import { JWTPayload } from "../../types/authTypes";
 import { UnauthorizedError } from "../../types/Errors";
+import { EventDto } from "../../types/EventTypes";
 import { doesPermissionsInclude } from "../../utils/authUtils";
+import EventsService from "./EventsService";
 
 /**
  * Controller for the members module
@@ -26,46 +26,12 @@ export class EventsController extends Controller {
   }
 
   /**
-   * Retrieves the members of the event with the given `eventID`
-   * @summary Retrieves the members of the event
-   * @param eventID The ID of the event to retrieve the members of
-   */
-  /*   @Get("{eventID}/members")
-  @Security("jwt")
-  public async getEventMembers(@Path() eventID: number): Promise<EventMember[]> {
-    return this.eventsService.getEventMembers(eventID);
-  } */
-
-  /**
-   * Retrieves the members of the working weekend event with the given `eventID`
-   * @summary Retrieves the members of the working weekend event
-   * @param eventID The ID of the event to retrieve the members of
-   */
-  /*   @Get("{eventID}/ww-members")
-  @Security("jwt")
-  public async getEventWWMembers(@Path() eventID: number): Promise<EventWWMember[]> {
-    return this.eventsService.getEventWWMembers(eventID);
-  } */
-
-  /**
-   * Retrieves the organizers of the event with the given `eventID`
-   * @summary Retrieves the organizers of the event
-   * @param eventID The ID of the event to retrieve the organizers of
-   */
-  /*  @Get("{eventID}/organizers")
-  @Security("jwt")
-  public async getEventOrganizers(@Path() eventID: number): Promise<EventMember[]> {
-    return this.eventsService.getEventOrganizers(eventID);
-  } */
-
-  /**
    * Updates the event with the given `eventID` with the given `updatedEvent`
    * @summary Updates the event
    * @param eventID The ID of the event to update
    * @param updatedEvent The updated event
    * @example requestBody {
-   *  "event": {
-   *    "eventID": 7,
+   *    "eventId": 7,
    *    "name": "Test Event",
    *    "location": "Test Location",
    *    "startDate": "2022-01-01",
@@ -76,29 +42,28 @@ export class EventsController extends Controller {
    *    "registrationEnd": "2021-01-02",
    *    "maxParticipants": 100,
    *    "description": "Test Description",
-   *    "type": "WW"
-   * },
-   * "organizers": [
-   *   {
-   *    "memberID": 8167,
-   *    "vorname": "Wolfgang",
-   *    "nachname": "Luft",
-   *    "status": "aktiv",
-   *    "name": "w.luft"
-   *   }
-   *  ]
+   *    "type": "Sonstige",
+   *    "organizers": [
+   *      {
+   *        "memberID": 8167,
+   *        "vorname": "Wolfgang",
+   *        "nachname": "Luft",
+   *        "status": "aktiv",
+   *        "name": "w.luft"
+   *      }
+   *    ],
+   *   "members": [],
+   *   "wwMembers": []
    * }
    */
   @Put("{eventID}")
   @Security("jwt")
   public async updateEvent(
     @Path() eventID: number,
-    @Body() requestBody: UpdateEventRequest,
+    @Body() requestBody: EventDto,
     @Request() request: any
   ): Promise<void> {
-    // TODO: Rework controller logic
-    const { organizers, event: updatedEvent } = requestBody;
-    const organizerIDs = organizers.map((organizer) => organizer.memberID);
+    const updatedEvent = requestBody;
     const currentOrganizers = await this.eventsService.getEventOrganizers(eventID);
 
     const user = request.user as JWTPayload;
@@ -106,11 +71,11 @@ export class EventsController extends Controller {
     // Check if the user has the permission to update the event or is part of the organizers
     if (
       !doesPermissionsInclude(user.permissions, [8]) &&
-      !currentOrganizers.some((organizer) => organizer.memberID === user.memberId)
+      !currentOrganizers.some((organizer) => organizer.memberId === user.memberId)
     ) {
       throw new UnauthorizedError("You are not allowed to update this event");
     }
 
-    await this.eventsService.updateEvent(eventID, updatedEvent, organizerIDs);
+    await this.eventsService.updateEvent(eventID, updatedEvent);
   }
 }
